--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -105,7 +105,7 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \section{Introduction}\label{introduction}
 
-Admixture, i.e. gene flow between populations, is a major evolutionary force that shapes genetic diversity and allows the exchange of beneficial variants. Genomic studies have shown that admixture is prevalent across species (\cite{Salazar_Hybrid_speciation_2010, rieseberg_hybridization_2007,kronforst_multilocus_2006,kolbe_multiple_2007}) and facilitates adaptation (\cite{harrison_hybridization_2014,hedrick_adaptive_2013, shaw_genes_2011,payseur_using_2010}).
+Admixture, i.e. gene flow between populations, is a major evolutionary force that shapes genetic diversity and allows the potential exchange of beneficial variants. Genomic studies have shown that admixture is prevalent across species (\cite{Salazar_Hybrid_speciation_2010, rieseberg_hybridization_2007,kronforst_multilocus_2006,kolbe_multiple_2007}) and facilitates adaptation (\cite{harrison_hybridization_2014,hedrick_adaptive_2013, shaw_genes_2011,payseur_using_2010}).
 
 The advent of wide-spread full-genome sequencing methods makes it easier to detect admixture events
 between populations (\cite{sousa_understanding_2013}). In humans, the sequencing of
@@ -626,7 +626,7 @@ admixture time estimates for a pulse or a multi-generation admixture are similar
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig3-1.pdf}
-\caption{\label{fig:fig3} Comparison of the standardized difference between true and estimated admixture time for each parameter and the standard model of 100 replications each. Dotted line represents the model prediction with the 5.5 \% and 94.5 \% compatibility intervals solid lines. Dotted horizontal line indicates unbiased admixture estimates.}
+\caption{\label{fig:fig3} Comparison of the standardized difference between true and estimated admixture time for each parameter and the standard model of 100 replications each. . Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
 \subsection{Estimating the Lomax-parameters under different conditions}\label{estimating the Lomax-parameters under different conditions}
@@ -711,15 +711,30 @@ with all YRI and 3 high coverage Neandertals as reference populations. A) Weight
 
 \section{Discussion}\label{discussion}
 
-Archaeological evidence suggests that Neandertals and modern human populations overlapped in some regions for
-a long period of time \citep{higham_timing_2014}, potentially resulting
-in continuous admixture over hundreds of generations. However, estimates for the time of Neandertal-Human admixture usually assumes only a one-generation pulse. 
+How, where and when Neandertals and early modern humans interacted remains contentious.  
+Archaeological evidence bounds the timing of interactions to times when their range overlapped; from the first out-of-Africa migrations of modern humans XX years ago to the extinction of Neandertals ~39kya \citep{higham_timing_2014}, leaving a time-span of roughly 100ky  \citep{higham_timing_2014}.
+
+Genetic data has revealed that gene flow between Neandertals and modern humans did occur \cite{green_draft_2010}; and it's mean age is estimated to 47,000–65,000 ya \citep{sankararaman_date_2012}, assuming the interaction occured at an instantaneous pulse.
+
+Here, we contrasted this pulse model with scenarios involving more long-standing gene flow.  Our model, assumes that migration rates  follow a Gamma distribution, which results in an simple closed-form expressions for the introgressed segment lengths or ALD  distributions. 
+
+In our analyses using the extended model, we find that most methods focus on the mean time of gene flow, and are mostly accurate in its inference. However, we also show that even gene flow lasting thousands of generations may yield data that are practically indistinguishable from a pulse, and that other modelling and method assumptions have an impact on estimates that are of a similar magnitude.
+
+The major implication of this result is that one has to be extremely cautious when interpreting results of genetic dating; the data are entirely consistent with gene flow occurring both earlier and later than the confidence intervals of the mean gene flow timing might indicate. This is of great practical importance as it might be tempting to link the genetic admixture date estimates with biogeographical events. For example, the lower bounds on admixture time estimates might be used as dates of Neandertal extinction, and likewise use the earliest dates of gene flow as evidence when the out-of-Africa migration happened \citep{sankararaman_date_2012}. Our results show that both of these analyses might be misleading.
 
 
-In this study we were interested in the effect of this assumption and to relax it. We suggested a model for continuous admixture over time following a Gamma distribution, where the introgressed segment length or ALD follows a Lomax distribution. Using the Gamma admixture model, we established that even for very long continuous admixture scenarios, estimates for the mean time are compatible with a pulse like admixture. Testing the influence of different parameter scenarios on the admixture mean time estimates, revealed that the error in the estimates is out weighted by all other tested model parameters. Assuming a constant recombination rate will lead to sever underestimations of admixture times, whereas the other parameters tested (demography and analysis parameters) are far less influential. Although this bias is known from previous studies, we notice it is underappreciated that reliable mean time estimates can only be obtained using population specific recombination maps, especially for archaic admixture events. Even though reliable estimates can be obtained using a population specific recombination map, they in turn do not hold any information on the boundaries of a potential continuous admixture scenario. This however could be highly informative about the first contact between humans and Neandertals and the potential time of Neandertal extinction.
+
+
+Using the Gamma admixture model, we established that even for very long continuous admixture scenarios, estimates for the mean time are compatible with a pulse like admixture. Testing the influence of different parameter scenarios on the admixture mean time estimates, revealed that the error in the estimates is out weighted by all other tested model parameters. Assuming a constant recombination rate will lead to sever underestimations of admixture times, whereas the other parameters tested (demography and analysis parameters) are far less influential. Although this bias is known from previous studies, we notice it is underappreciated that reliable mean time estimates can only be obtained using population specific recombination maps, especially for archaic admixture events. Even though reliable estimates can be obtained using a population specific recombination map, they in turn do not hold any information on the boundaries of a potential continuous admixture scenario. This however could be highly informative about the first contact between humans and Neandertals and the potential time of Neandertal extinction.
+
 Hence, by using our continuous admixture model and the information on influencing parameters, we could obtain admixture durations modeling the ALD using the Lomax distribution under ideal circumstances, where we exactly know the genetic distance between introgressed SNPs and the recombination process is constant. Relaxation of the latter assumption while still knowing the exact population specific recombination map  leads to  uncertainty in the estimates. This uncertainty depends on the duration and time of sampling from the end of the admixture event. Crucially we could show that there is no power to correctly infer admixture durations even for long admixture scenarios under ideal circumstances if the event is to long ago. Likewise, reliable distinction between a pulse like admixture model and a multi-generation continuous model for Human-Neandertal admixture scenarios is not definite. We demonstrated that a multitude of different duration scenarios are compatible for the Human-Neandertal admixture estimated from  present-day non-Africans genomes. Hence, we conclude that using present day non-African human genomes for inference is not conclusive to resolve the duration of Neandertal admixture. As a consequence we could neither obtain genetic indications of the first contact between Humans and Neandertals nor for the time of potential Neandertal extinction.
 
-However, there are some ways to infer admixture event across time. Population differentiation between different introgressing archaic populations is a strong indicator for multi-generation admixture as shown in \cite{browning_analysis_2018}. Although not distinguishable by deconvoluting the length distribution of the archaic segments in the present-day East-Asian individuals to infer the time, the genetic differentiation between the segments with its implication of coming from different sources is unlikely to happen at the exact same time. Another possibility is using ancient DNA from admixed individuals to sample closer from the end of the admixture event. This could potentially help in either deconvolute discrete admixture pulses, which has the disadvantage of fitting multiple parameters or using our suggested approach on the ancient data. With a sufficient amount of ancient DNA samples from the same time period one could infer a recombination map. With that our study suggest that it would be possible to estimate a potential multi-generation admixture duration. One could also think of combining both ideas. Allocate introgressed segments from ancient DNA samples into different ancestry clusters according to their genetic differentiation and separately inferring mean and duration of the admixture time on each ancestry cluster. 
+While our results show that drawing concrete conclusions from introgression time estimates, other avenues for differentiating different gene flow events remain fruitful.
+In particular, measures based on population differentiation (e.g \cite{browning_analysis_2018}, \cite{wall2013_genetics}, \cite{villanea_schraiber 2018_nature_ee}, \cite{jacobs_multiple_2019}) are very promising to understand the different events that contributed to archaic ancestry in present-day humans. 
+
+The other major avenue are ancient DNA samples from early modern humans that lived around or immediately after gene flow between archaic and modern humans occurred. The \textit{Oase 1} genome is a prime example, as it directly demonstrates that some gene flow must have occurred in Europe, around 40,000 years ago, concurrently with when \textit{Oase 1 lived}. More generally, detailed analyses of ancient genomes from the initial upper paleolithic should provide more accurate mean dates, as they are much closer to the gene flow, and may give better evidence about the duration of the gene flow. The drawback is that some of the gene flow these individuals experience may be private to their population, as has e.g. been suggested for \textit{Oase 1}(\cite{fu_genome_2014}). Larger numbers of early modern human genomes, as well as methods to accurately infer admixture tracts or ALD in low-coverage data will likely enable this line of research. 
+
+ Another possibility is using ancient DNA from admixed individuals to sample closer from the end of the admixture event. This could potentially help in either deconvolute discrete admixture pulses, which has the disadvantage of fitting multiple parameters or using our suggested approach on the ancient data. With a sufficient amount of ancient DNA samples from the same time period one could infer a recombination map. With that our study suggest that it would be possible to estimate a potential multi-generation admixture duration. One could also think of combining both ideas. Allocate introgressed segments from ancient DNA samples into different ancestry clusters according to their genetic differentiation and separately inferring mean and duration of the admixture time on each ancestry cluster. 
 
 Conclusions:
 
@@ -796,5 +811,75 @@ Lomax mean time estimate for the same scenario C) Mean time estimates of the Exp
 generations of continuous admixture. D) Lomax mean time estimate for the same scenario}
 \end{figure}
 
+\begin{table}[H]
+
+\caption{\label{tab:tableS2}\label{tab:tableS2} Mean and 2.5/97.5 compatibility interval for every parameter estimated in the model fit}
+\centering
+\begin{tabular}{l|l|l|l|l}
+\hline
+Model & Parameter & Estimate & 2.5 \% & 97.5 \%\\
+\hline
+Exponential & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Exponential & mean time & 1540.52127416954 & 1486.87424159324 & 1598.18442378037\\
+\hline
+Exponential & c & 1.04924805906946e-05 & 6.11971522205646e-06 & 1.48652459593327e-05\\
+\hline
+Lomax (td=1) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=1) & mean time & 1540.4535829052 & 1486.80890760596 & 1598.11419876881\\
+\hline
+Lomax (td=1) & c & 1.04879925636383e-05 & 6.11522719500016e-06 & 1.48607579322764e-05\\
+\hline
+Lomax (td=100) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=100) & mean time & 1541.21447780445 & 1487.54330514089 & 1598.90357467455\\
+\hline
+Lomax (td=100) & c & 1.04778285719237e-05 & 6.10506320328556e-06 & 1.48505939405618e-05\\
+\hline
+Lomax (td=200) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=200) & mean time & 1543.29935022922 & 1489.55557407698 & 1601.06648582073\\
+\hline
+Lomax (td=200) & c & 1.0433937247714e-05 & 6.06117187907592e-06 & 1.48067026163522e-05\\
+\hline
+Lomax (td=400) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=400) & mean time & 1551.70452997381 & 1497.66805228013 & 1609.78627929072\\
+\hline
+Lomax (td=400) & c & 1.02583936040117e-05 & 5.88562823537355e-06 & 1.46311589726498e-05\\
+\hline
+Lomax (td=800) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=800) & mean time & 1586.20214120494 & 1530.9643204954 & 1645.57516831918\\
+\hline
+Lomax (td=800) & c & 9.54368319534451e-06 & 5.17091782670639e-06 & 1.39164485639826e-05\\
+\hline
+Lomax (td=1000) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=1000) & mean time & 1613.03878564827 & 1556.86640703106 & 1673.41633342024\\
+\hline
+Lomax (td=1000) & c & 8.99440086897965e-06 & 4.62163550034154e-06 & 1.33671662376178e-05\\
+\hline
+Lomax (td=1500) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=1500) & mean time & 1713.23403168493 & 1653.57245904084 & 1777.36198106405\\
+\hline
+Lomax (td=1500) & c & 6.99226716776451e-06 & 2.6195017991264e-06 & 1.13650325364026e-05\\
+\hline
+Lomax (td=2000) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=2000) & mean time & 1874.70292082734 & 1809.41836400178 & 1944.87480148365\\
+\hline
+Lomax (td=2000) & c & 3.90605094093569e-06 & -4.66714427702433e-07 & 8.2788163095738e-06\\
+\hline
+Lomax (td=2500) & A & 0.0177951995245944 & 0.0177908267592258 & 0.017799572289963\\
+\hline
+Lomax (td=2500) & mean time & 2128.77288305327 & 2054.64060710254 & 2208.45483960993\\
+\hline
+Lomax (td=2500) & c & -6.57454976888574e-07 & -5.03022034552669e-06 & 3.71531039174954e-06\\
+\hline
+\end{tabular}
+\end{table}
 
 \end{document}
