Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -603,8 +603,7 @@ Figure \ref{fig:fig3} shows the comparison of the standardized
 difference between true and estimated time between the previously used
 model (ascertainment = LES, \(d_{0} = 0.02 cM\), demography = simple and
 recombination = constant) further refereed to as the standard model and
-a model with one of the four parameter changed, respectively and the
-corresponding model prediction. The previously observed overestimation
+a model with one of the four parameter changed, respectively. The previously observed overestimation
 of the standard model was estimated to be 0.25 (0.22 - 0.29 95 \% CI)
 standard deviation from the true admixture time. Every parameter change
 results in lower estimates compared to the standard model, with the
