new refs for first OoA and Nea extinction dates

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1392,3 +1392,91 @@ Recombination rates vary across the genome and across populations in a way that 
 	keywords = {genetics, genome, human evolution, Neandertals},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/H3MPIEJJ/Mafessoni et al. - 2020 - A high-coverage Neandertal genome from Chagyrskaya.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/IJFDIJ49/2004944117.html:text/html}
 }
+
+
+@article{zilhao_precise_2017,
+	title = {Precise dating of the {Middle}-to-{Upper} {Paleolithic} transition in {Murcia} ({Spain}) supports late {Neandertal} persistence in {Iberia}},
+	volume = {3},
+	issn = {2405-8440},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5696381/},
+	doi = {10.1016/j.heliyon.2017.e00435},
+	abstract = {The late persistence in Southern Iberia of a Neandertal-associated Middle Paleolithic is supported by the archeological stratigraphy and the radiocarbon and luminescence dating of three newly excavated localities in the Mula basin of Murcia (Spain). At Cueva Antón, Mousterian layer I-k can be no more than 37,100 years-old. At La Boja, the basal Aurignacian can be no less than 36,500 years-old. The regional Middle-to-Upper Paleolithic transition process is thereby bounded to the first half of the 37th millennium Before Present, in agreement with evidence from Andalusia, Gibraltar and Portugal. This chronology represents a lag of minimally 3000 years with the rest of Europe, where that transition and the associated process of Neandertal/modern human admixture took place between 40,000 and 42,000 years ago. The lag implies the presence of an effective barrier to migration and diffusion across the Ebro river depression, which, based on available paleoenvironmental indicators, would at that time have represented a major biogeographical divide. In addition, (a) the Phlegraean Fields caldera explosion, which occurred 39,850 years ago, would have stalled the Neandertal/modern human admixture front because of the population sink it generated in Central and Eastern Europe, and (b) the long period of ameliorated climate that came soon after (Greenland Interstadial 8, during which forests underwent a marked expansion in Iberian regions south of 40°N) would have enhanced the “Ebro Frontier” effect. These findings have two broader paleoanthropological implications: firstly, that, below the Ebro, the archeological record made prior to 37,000 years ago must be attributed, in all its aspects and components, to the Neandertals (or their ancestors); secondly, that modern human emergence is best seen as an uneven, punctuated process during which long-lasting barriers to gene flow and cultural diffusion could have existed across rather short distances, with attendant consequences for ancient genetics and models of human population history.},
+	number = {11},
+	urldate = {2020-06-29},
+	journal = {Heliyon},
+	author = {Zilhão, João and Anesin, Daniela and Aubry, Thierry and Badal, Ernestina and Cabanes, Dan and Kehl, Martin and Klasen, Nicole and Lucena, Armando and Martín-Lerma, Ignacio and Martínez, Susana and Matias, Henrique and Susini, Davide and Steier, Peter and Wild, Eva Maria and Angelucci, Diego E. and Villaverde, Valentín and Zapata, Josefina},
+	month = nov,
+	year = {2017},
+	pmid = {29188235},
+	pmcid = {PMC5696381},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/3BASUG9F/Zilhão et al. - 2017 - Precise dating of the Middle-to-Upper Paleolithic .pdf:application/pdf}
+}
+
+
+@article{hublin_initial_2020,
+	title = {Initial {Upper} {Palaeolithic} {Homo} sapiens from {Bacho} {Kiro} {Cave}, {Bulgaria}},
+	volume = {581},
+	copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2259-z},
+	doi = {10.1038/s41586-020-2259-z},
+	abstract = {The Middle to Upper Palaeolithic transition in Europe witnessed the replacement and partial absorption of local Neanderthal populations by Homo sapiens populations of African origin1. However, this process probably varied across regions and its details remain largely unknown. In particular, the duration of chronological overlap between the two groups is much debated, as are the implications of this overlap for the nature of the biological and cultural interactions between Neanderthals and H. sapiens. Here we report the discovery and direct dating of human remains found in association with Initial Upper Palaeolithic artefacts2, from excavations at Bacho Kiro Cave (Bulgaria). Morphological analysis of a tooth and mitochondrial DNA from several hominin bone fragments, identified through proteomic screening, assign these finds to H. sapiens and link the expansion of Initial Upper Palaeolithic technologies with the spread of H. sapiens into the mid-latitudes of Eurasia before 45 thousand years ago3. The excavations yielded a wealth of bone artefacts, including pendants manufactured from cave bear teeth that are reminiscent of those later produced by the last Neanderthals of western Europe4–6. These finds are consistent with models based on the arrival of multiple waves of H. sapiens into Europe coming into contact with declining Neanderthal populations7,8.},
+	language = {en},
+	number = {7808},
+	urldate = {2020-06-29},
+	journal = {Nature},
+	author = {Hublin, Jean-Jacques and Sirakov, Nikolay and Aldeias, Vera and Bailey, Shara and Bard, Edouard and Delvigne, Vincent and Endarova, Elena and Fagault, Yoann and Fewlass, Helen and Hajdinjak, Mateja and Kromer, Bernd and Krumov, Ivaylo and Marreiros, João and Martisius, Naomi L. and Paskulin, Lindsey and Sinet-Mathiot, Virginie and Meyer, Matthias and Pääbo, Svante and Popov, Vasil and Rezek, Zeljko and Sirakova, Svoboda and Skinner, Matthew M. and Smith, Geoff M. and Spasov, Rosen and Talamo, Sahra and Tuna, Thibaut and Wacker, Lukas and Welker, Frido and Wilcke, Arndt and Zahariev, Nikolay and McPherron, Shannon P. and Tsanova, Tsenka},
+	month = may,
+	year = {2020},
+	pages = {299--302},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/T2WBK2XH/Hublin et al. - 2020 - Initial Upper Palaeolithic Homo sapiens from Bacho.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/RB38B3HE/s41586-020-2259-z.html:text/html}
+}
+
+
+@article{hershkovitz_earliest_2018,
+	title = {The earliest modern humans outside {Africa}},
+	volume = {359},
+	copyright = {Copyright © 2018, The Authors, some rights reserved; exclusive licensee American Association for the Advancement of Science. No claim to original U.S. Government Works. http://www.sciencemag.org/about/science-licenses-journal-article-reuseThis is an article distributed under the terms of the Science Journals Default License.},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/359/6374/456},
+	doi = {10.1126/science.aap8369},
+	abstract = {Earliest modern humans out of Africa
+Recent paleoanthropological studies have suggested that modern humans migrated from Africa as early as the beginning of the Late Pleistocene, 120,000 years ago. Hershkovitz et al. now suggest that early modern humans were already present outside of Africa more than 55,000 years earlier (see the Perspective by Stringer and Galway-Witham). During excavations of sediments at Mount Carmel, Israel, they found a fossil of a mouth part, a left hemimaxilla, with almost complete dentition.
+The sediments contain a series of well-defined hearths and a rich stone-based industry, as well as abundant animal remains. Analysis of the human remains, and dating of the site and the fossil itself, indicate a likely age of at least 177,000 years for the fossil—making it the oldest member of the Homo sapiens clade found outside Africa.
+Science, this issue p. 456; see also p. 389
+To date, the earliest modern human fossils found outside of Africa are dated to around 90,000 to 120,000 years ago at the Levantine sites of Skhul and Qafzeh. A maxilla and associated dentition recently discovered at Misliya Cave, Israel, was dated to 177,000 to 194,000 years ago, suggesting that members of the Homo sapiens clade left Africa earlier than previously thought. This finding changes our view on modern human dispersal and is consistent with recent genetic studies, which have posited the possibility of an earlier dispersal of Homo sapiens around 220,000 years ago. The Misliya maxilla is associated with full-fledged Levallois technology in the Levant, suggesting that the emergence of this technology is linked to the appearance of Homo sapiens in the region, as has been documented in Africa.
+Fossilized mouthparts indicate the presence of Homo sapiens in the Levant 160,000 years ago.
+Fossilized mouthparts indicate the presence of Homo sapiens in the Levant 160,000 years ago.},
+	language = {en},
+	number = {6374},
+	urldate = {2020-06-29},
+	journal = {Science},
+	author = {Hershkovitz, Israel and Weber, Gerhard W. and Quam, Rolf and Duval, Mathieu and Grün, Rainer and Kinsley, Leslie and Ayalon, Avner and Bar-Matthews, Miryam and Valladas, Helene and Mercier, Norbert and Arsuaga, Juan Luis and Martinón-Torres, María and Castro, José María Bermúdez de and Fornai, Cinzia and Martín-Francés, Laura and Sarig, Rachel and May, Hila and Krenn, Viktoria A. and Slon, Viviane and Rodríguez, Laura and García, Rebeca and Lorenzo, Carlos and Carretero, Jose Miguel and Frumkin, Amos and Shahack-Gross, Ruth and Mayer, Daniella E. Bar-Yosef and Cui, Yaming and Wu, Xinzhi and Peled, Natan and Groman-Yaroslavski, Iris and Weissbrod, Lior and Yeshurun, Reuven and Tsatskin, Alexander and Zaidner, Yossi and Weinstein-Evron, Mina},
+	month = jan,
+	year = {2018},
+	pmid = {29371468},
+	pages = {456--459},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/9PYKYG5P/Hershkovitz et al. - 2018 - The earliest modern humans outside Africa.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/LQ3LX3DS/456.html:text/html}
+}
+
+
+@article{stringer_when_2018,
+	title = {When did modern humans leave {Africa}?},
+	volume = {359},
+	copyright = {Copyright © 2018, American Association for the Advancement of Science. http://www.sciencemag.org/about/science-licenses-journal-article-reuseThis is an article distributed under the terms of the Science Journals Default License.},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/359/6374/389},
+	doi = {10.1126/science.aas8954},
+	abstract = {A ∼180,000-year-old fossil from Israel provides evidence for early forays of Homo sapiens into western Asia
+A ∼180,000-year-old fossil from Israel provides evidence for early forays of Homo sapiens into western Asia},
+	language = {en},
+	number = {6374},
+	urldate = {2020-06-29},
+	journal = {Science},
+	author = {Stringer, Chris and Galway-Witham, Julia},
+	month = jan,
+	year = {2018},
+	pmid = {29371454},
+	pages = {389--390},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/VXQL6ISG/Stringer and Galway-Witham - 2018 - When did modern humans leave Africa.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/79ZK4FPE/389.html:text/html}
+}
