--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1480,3 +1480,44 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 	pages = {389--390},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/VXQL6ISG/Stringer and Galway-Witham - 2018 - When did modern humans leave Africa.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/79ZK4FPE/389.html:text/html}
 }
+
+
+@article{villanea_multiple_2019,
+	title = {Multiple episodes of interbreeding between {Neanderthal} and modern humans},
+	volume = {3},
+	copyright = {2018 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {2397-334X},
+	url = {https://www.nature.com/articles/s41559-018-0735-8},
+	doi = {10.1038/s41559-018-0735-8},
+	abstract = {Neanderthals and anatomically modern humans overlapped geographically for a period of over 30,000 years following human migration out of Africa. During this period, Neanderthals and humans interbred, as evidenced by Neanderthal portions of the genome carried by non-African individuals today. A key observation is that the proportion of Neanderthal ancestry is {\textasciitilde}12–20\% higher in East Asian individuals relative to European individuals. Here, we explore various demographic models that could explain this observation. These include distinguishing between a single admixture event and multiple Neanderthal contributions to either population, and the hypothesis that reduced Neanderthal ancestry in modern Europeans resulted from more recent admixture with a ghost population that lacked a Neanderthal ancestry component (the ‘dilution’ hypothesis). To summarize the asymmetric pattern of Neanderthal allele frequencies, we compiled the joint fragment frequency spectrum of European and East Asian Neanderthal fragments and compared it with both analytical theory and data simulated under various models of admixture. Using maximum-likelihood and machine learning, we found that a simple model of a single admixture did not fit the empirical data, and instead favour a model of multiple episodes of gene flow into both European and East Asian populations. These findings indicate a longer-term, more complex interaction between humans and Neanderthals than was previously appreciated.},
+	language = {en},
+	number = {1},
+	urldate = {2020-06-29},
+	journal = {Nature Ecology \& Evolution},
+	author = {Villanea, Fernando A. and Schraiber, Joshua G.},
+	month = jan,
+	year = {2019},
+	pages = {39--44},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/L6V3J8G6/Villanea and Schraiber - 2019 - Multiple episodes of interbreeding between Neander.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/9R5XCQZD/s41559-018-0735-8.html:text/html}
+}
+
+
+@article{wall_higher_2013,
+	title = {Higher {Levels} of {Neanderthal} {Ancestry} in {East} {Asians} than in {Europeans}},
+	volume = {194},
+	copyright = {Copyright © 2013 by the Genetics Society of America},
+	issn = {0016-6731, 1943-2631},
+	url = {https://www.genetics.org/content/194/1/199},
+	doi = {10.1534/genetics.112.148213},
+	abstract = {Neanderthals were a group of archaic hominins that occupied most of Europe and parts of Western Asia from ∼30,000 to 300,000 years ago (KYA). They coexisted with modern humans during part of this time. Previous genetic analyses that compared a draft sequence of the Neanderthal genome with genomes of several modern humans concluded that Neanderthals made a small (1–4\%) contribution to the gene pools of all non-African populations. This observation was consistent with a single episode of admixture from Neanderthals into the ancestors of all non-Africans when the two groups coexisted in the Middle East 50–80 KYA. We examined the relationship between Neanderthals and modern humans in greater detail by applying two complementary methods to the published draft Neanderthal genome and an expanded set of high-coverage modern human genome sequences. We find that, consistent with the recent finding of Meyer et al. (2012), Neanderthals contributed more DNA to modern East Asians than to modern Europeans. Furthermore we find that the Maasai of East Africa have a small but significant fraction of Neanderthal DNA. Because our analysis is of several genomic samples from each modern human population considered, we are able to document the extent of variation in Neanderthal ancestry within and among populations. Our results combined with those previously published show that a more complex model of admixture between Neanderthals and modern humans is necessary to account for the different levels of Neanderthal ancestry among human populations. In particular, at least some Neanderthal–modern human admixture must postdate the separation of the ancestors of modern European and modern East Asian populations.},
+	language = {en},
+	number = {1},
+	urldate = {2020-06-29},
+	journal = {Genetics},
+	author = {Wall, Jeffrey D. and Yang, Melinda A. and Jay, Flora and Kim, Sung K. and Durand, Eric Y. and Stevison, Laurie S. and Gignoux, Christopher and Woerner, August and Hammer, Michael F. and Slatkin, Montgomery},
+	month = may,
+	year = {2013},
+	pmid = {23410836},
+	keywords = {ancient admixture, human evolution, Neanderthals},
+	pages = {199--209}
+}
