Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -113,9 +113,11 @@ the Neandertal genome (\cite{green_draft_2010}) revealed that all humans outside
 (\cite{green_draft_2010,prufer_complete_2013,vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,prufer_high-coverage_2017}). In addition, the  Denisovan genome (\cite{reich_genetic_2010})
 showed low proportions of Denisovan ancestry being widespread in Oceania and to a smaller extent in East-Asia
 (\cite{reich_genetic_2010,meyer_high-coverage_2012,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}).
-This genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations can also help resolving the timing and duration of contact by genetically dating the admixture.
-Moreover, additional to archaeological records of Neandertals, the admixture can hint to the time of their disappearance assumed to be at the end of the Mousterian around 41,030–39,260 calibrated years before present (yBP) (\cite{higham_timing_2014}), based on archaeological data. 
-Together, genetically dated admixture events can be a clue of the debated question of contact with and extinction of these hominin populations.
+
+
+
+This genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations is often used to resolve the timing and duration of biogeographical events using admixture dates. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans, when their range overlapped. Archaeological evidence suggest a range overlap between the first modern humans out-of-Africa at around 188 thousand years ago (kya) (\cite{stringer_when_2018,hershkovitz_earliest_2018}) and a possible extinction of Neandertals around 37 kya (\cite{zilhao_precise_2017}) and 39 kya (\cite{higham_timing_2014}) at the end of the Mousterian. This leaves a potential timeframe for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture is hoped to unveil more evidence of the timing and especially duration of this interaction,
+potentially holding a clue of the debated question of extinction of these hominin populations. Another example is the geographical range distribution of Denisovans that is inferred by admixture proportions and time estimates from present day population and their geographical distribution (\cite{jacobs_multiple_2019}). 
 
 \subsection{Admixture on the genomic level and basic idea how to date
 it}\label{admixture-on-the-genomic-level-and-basic-idea-how-to-date-it}
@@ -711,7 +713,7 @@ with all YRI and 3 high coverage Neandertals as reference populations. A) Weight
 \section{Discussion}\label{discussion}
 
 How, where and when Neandertals and early modern humans interacted remains contentious.  
-Archaeological evidence bounds the timing of interactions to times when their range overlapped; from the first out-of-Africa migrations of modern humans around 188 years ago (\cite{stringer_when_2018,hershkovitz_earliest_2018}) to the extinction of Neandertals around 37 - 39 kya \cite{higham_timing_2014,zilhao_precise_2017}), leaving a time-span of roughly 140ky.
+Archaeological evidence bounds the timing of interactions to times when their range overlapped; from the first out-of-Africa migrations of modern humans around 188 k years ago (\cite{stringer_when_2018,hershkovitz_earliest_2018}) to the extinction of Neandertals around 37 - 39 kya \cite{higham_timing_2014,zilhao_precise_2017}), leaving a time-span of roughly 140ky.
 
 Genetic data has revealed that gene flow between Neandertals and modern humans did occur \cite{green_draft_2010}; and it's mean age is estimated to 47,000–65,000 ya \citep{sankararaman_date_2012}, assuming the interaction occurred at an instantaneous pulse.
 
@@ -723,30 +725,10 @@ The major implication of our result is that one has to be extremely cautious whe
 
 
 While our results show that drawing concrete conclusions from introgression time estimates, other avenues for differentiating different gene flow events remain fruitful.
-In particular, measures based on population differentiation (e.g \cite{browning_analysis_2018}, \cite{wall2013_genetics}, \cite{villanea_schraiber 2018_nature_ee}, \cite{jacobs_multiple_2019}) are very promising to understand the different events that contributed to archaic ancestry in present-day humans. 
+In particular, measures based on population differentiation (e.g \cite{browning_analysis_2018,wall_higher_2013,villanea_multiple_2019,jacobs_multiple_2019}) are very promising to understand the different events that contributed to archaic ancestry in present-day humans. 
 
-The other major avenue are ancient DNA samples from early modern humans that lived around or immediately after gene flow between archaic and modern humans occurred. The \textit{Oase 1} genome is a prime example, as it directly demonstrates that some gene flow must have occurred in Europe, around 40,000 years ago, concurrently with when \textit{Oase 1 lived}. More generally, detailed analyses of ancient genomes from the initial upper paleolithic should provide more accurate mean dates, as they are much closer to the gene flow, and may give better evidence about the duration of the gene flow. The drawback is that some of the gene flow these individuals experience may be private to their population, as has e.g. been suggested for \textit{Oase 1}(\cite{fu_genome_2014}). Larger numbers of early modern human genomes, as well as methods to accurately infer admixture tracts or ALD in low-coverage data will likely enable this line of research. 
+The other major avenue are ancient DNA samples from early modern humans that lived around or immediately after gene flow between archaic and modern humans occurred. The \textit{Oase 1} genome is a prime example, as it directly demonstrates that some gene flow must have occurred in Europe, around 40,000 years ago, concurrently with when \textit{Oase 1} lived. More generally, detailed analyses of ancient genomes from the initial upper paleolithic should provide more accurate mean dates, as they are much closer to the gene flow, and may give better evidence about the duration of the gene flow. The drawback is that some of the gene flow these individuals experience may be private to their population, as has e.g. been suggested for \textit{Oase 1}(\cite{fu_genome_2014}). Larger numbers of early modern human genomes, as well as methods to accurately infer admixture tracts or ALD in low-coverage data will likely enable this line of research. 
 
-
-
-Conclusions:
-
-\begin{itemize}
-    \item The mean time of gene flow can be reliably estimated with a pulse model even if the gene flow is actually continuous. (check)
-  \item Technical model variables (ascertainment scheme, minimal distance, demography and recombination map) outweigh the effect of continuous gene flow. (check)
-  \item The Lomax model is under powered to inferring continuous admixture for parameters relevant for Neandertal admixture. (check)
-  \item Estimating  the mean time and especially the duration of gene flow is only possible with a highly precise genetic map. (check)
-  \item The signal of continuous gene flow is hard to detect if the gene flow is not long enough or to far in the past. (check)
-  \item Reliably distinguishing the models is difficult. (check)
-\end{itemize}
-
-Outlook:
-
-\begin{itemize}
-  \item Population differentiation can help identifying different admixture events across time (e.g. Browning et al. 2018) (check)
-  \item sampling close to the end of the admixture e.g. using ancient genomes and using a accurate recombination map enables the inference of admixture duration (check)
-  
-\end{itemize}
 
 \hypertarget{refs}{}
 
